2007-11-10  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gtk-doc.scm (extract-defs)
	(check-documentation-coverage): New export,
	check-documentation-coverage, which looks at a texinfo file and a
	set of modules to determine which exports of the modules are
	undocumented.

2007-11-01  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gtk-doc.scm (gobject-class-stexi-docs): Put
	prop descriptions in a para.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* VERSION: Bumped to 2.15.94.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-09-24  Andy Wingo  <wingo@pobox.com>

	* test-suite/Makefile.am: Update for gobject docs moving.

	* doc/gobject/docs.mk: Update a bit.

	* test-suite/gobject.api: Regenerate for gtk-doc.scm changes, an
	incompatible change but not in any released version.

	* gnome/gw/support/gtk-doc.scm: Document the module, and reduce
	the number of exports to just two. Move around some definitions.
	(gtk-doc->texi-defuns): Rework to handle either the heuristics
	mode or g-wrap, and document.
	(gtk-doc->texi-stubs): Document.

	* doc/gobject/make-texinfo.scm: Add spaces between args to deal
	with fixed guile-lib serialization.

	* doc/glib/: 
	* doc/gobject/: GLib and GObject docs moved to separate
	directories.

2007-09-07  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gtk-doc.scm: Import gobject and goops so that
	we can do some runtime introspection of classes.
	(sdocbook-fold-structs): New function, folds over struct
	definitions.
	(signal-doc-name, signal-doc-docs, signal-refsect2-list)
	(signal-docs-alist, signal-stexi-args, class-signal-stexi-docs)
	(gobject-class-stexi-docs, gtk-doc-sdocbook->class-list/g-wrap):
	New functions to document classes, with their properties and
	signals.
	(gtk-doc->texi-defuns): Put class documentation before functions.

	* doc/section-*.texi: 
	* doc/defuns-*.texi: Regenerated.
